--- a/css/styles.css
+++ b/css/styles.css
@@ -515,6 +515,78 @@ a {
 }
 
 /* ................................... */
+.subscribe {
+  margin-left: auto;
+}
+.subscribe-p {
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #ffffff;
+  margin-bottom: 16px;
+}
+.form-subscribe {
+  display: flex;
+  gap: 24px;
+}
+
+.input-subscribe {
+  width: 264px;
+  height: 40px;
+  border: 1px solid #ffffff;
+  border-radius: 4px;
+  color: #ffffff;
+  background-color: transparent;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 2;
+  letter-spacing: 0.04em;
+  padding-left: 16px;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+}
+
+.input-subscribe:focus,
+.input-subscribe:hover {
+  border-color: #4d5ae5;
+}
+.input-subscribe::placeholder {
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 2;
+  letter-spacing: 0.04em;
+  color: #ffffff;
+  padding: 8px, 16px;
+}
+.subscribe-button {
+  min-width: 165px;
+  height: 40px;
+  background-color: #4d5ae5;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #ffffff;
+  border: none;
+  border-radius: 4px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.subscribe-button:focus,
+.subscribe-button:hover {
+  background-color: #404bbf;
+}
+.icon-button {
+  fill: #ffffff;
+  margin-left: 16px;
+}
 
 .backdrop {
   position: fixed;
@@ -589,8 +661,7 @@ a {
   letter-spacing: 0.32px;
   margin-bottom: 16px;
 }
-.label-container {
-}
+
 .div-label {
   margin-bottom: 8px;
 }
@@ -658,10 +729,7 @@ input:focus {
 .div-checkbox {
   margin-bottom: 24px;
 }
-.checkbox {
-}
-.visually-hidden {
-}
+
 .label-checkbox {
   font-size: 12px;
   line-height: 1.17;
@@ -690,8 +758,7 @@ input:focus {
 .checkbox:focus + .label-checkbox .span-checkbox {
   border-color: #4d5ae5;
 }
-.icon-checkbox {
-}
+
 .privacy-policy {
   color: #4d5ae5;
   font-size: 12px;
